fix: Address SonarCloud reliability issues
- Update enum constants to follow SCREAMING_SNAKE_CASE convention (PENDING, SUCCESS, IDLE, BUSY, etc.)
- Replace Stream.collect(Collectors.toList()) with Stream.toList() for Java 17 compatibility
- Add explicit parameter names to @PathVariable annotations for better maintainability
- Update all enum references in implementation and test files

These changes address the 15 SonarCloud reliability issues causing the C rating,
improving code quality and following Java best practices.

Co-Authored-By: Vishal Mysore <visrow@gmail.com>